# exonum-java-binding

./: .appveyor.yml  .gitignore  .gitmodules  .shellcheckrc  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSES-THIRD-PARTY.TXT  README.md  ROADMAP.md  WORKSHOP.md  checkstyle.xml  findbugs-exclude.xml  package_app.sh  package_profile  pom.xml  run_all_tests.bat  run_all_tests.sh  run_all_tests_with_coverage.sh  run_ejb_app_tests.sh  run_maven_tests.sh  run_native_integration_tests.sh  run_profile  run_rust_checks.sh  run_tests.sh  run_tests_with_clover.sh  skip-ci.sh  test_archetype.sh  tests_profile  toolchains-template-min.xml  write_cryptocurrency_classpath.sh
exonum-java-binding-core/rust/: Cargo.toml  NATIVE_LICENSES  cargo-mac.sh  cargo.sh  generate_licenses.sh
exonum-java-binding-core/rust/benches/: example_atomic_integer_proxy.rs  proxy.rs
exonum-java-binding-core/rust/dy_tests/: Cargo.toml
exonum-java-binding-core/rust/dy_tests/benches/: example_atomic_integer_proxy.rs
exonum-java-binding-core/rust/dy_tests/tests/: dumb_executor.rs
exonum-java-binding-core/rust/ejb-app/: Cargo.toml  TUTORIAL.md  copy-system-deps.sh  ejb_app_services.toml  log4j2.xml  log4j_template.xml  modify_runpath.sh  send_transaction.sh  start.sh  start_cryptocurrency_node.sh  start_qa_node.sh  start_workshop_node.sh
exonum-java-binding-core/rust/ejb-app/scripts/: configure.nodes.sh  init_env.sh  start_crypto_node.sh
exonum-java-binding-core/rust/ejb-app/src/: main.rs  node_builder.rs  service_factories.rs
exonum-java-binding-core/rust/ejb-app/testnet/: common.toml  node.toml  pub.toml  sec.toml
exonum-java-binding-core/rust/ejb-app/testnet/db/: 000038.sst  000040.sst  000042.sst  000044.sst  000046.sst  IDENTITY  LOG  MANIFEST-000006  OPTIONS-000022  OPTIONS-000024  OPTIONS-000034  OPTIONS-000036
exonum-java-binding-core/rust/integration_tests/: Cargo.toml
exonum-java-binding-core/rust/integration_tests/benches/: example_atomic_integer_proxy.rs  jni_cache.rs
exonum-java-binding-core/rust/integration_tests/src/: example_proxy.rs  executor.rs  lib.rs  test_service.rs  vm.rs
exonum-java-binding-core/rust/integration_tests/src/mock/: mod.rs  service.rs  transaction.rs
exonum-java-binding-core/rust/integration_tests/tests/: dumb_executor.rs  hacky_executor.rs  hacky_executor_exhausting.rs  jni_cache.rs  jni_cache_not_initialized.rs  local_frame_capacity.rs  local_frame_memory_leak_executor.rs  local_frame_memory_leak_jvm.rs  node_context.rs  service_proxy.rs  service_runtime.rs  transaction_proxy.rs  tx_proxy.rs  utils_errors.rs
exonum-java-binding-core/rust/integration_tests/tests/example_proxy/: mod.rs
exonum-java-binding-core/rust/integration_tests/tests/util/: mod.rs
exonum-java-binding-core/rust/src/: error.rs  init.rs  lib.rs  test_util.rs
exonum-java-binding-core/rust/src/proxy/: abc.rs  example_proxy.rs  executor.rs  executors.rs  mod.rs  node.rs  service.rs  transaction.rs  tx.rs
exonum-java-binding-core/rust/src/runtime/: cmd.rs  config.rs  java_service_runtime.rs  mod.rs
exonum-java-binding-core/rust/src/storage/: core_schema.rs  db.rs  entry.rs  indexes_metadata.rs  key_set_index.rs  list_index.rs  map_index.rs  memorydb.rs  mod.rs  proof_list_index.rs  proof_map_index.rs  shadow_table.rs  sparse_list_index.rs  value_set_index.rs
exonum-java-binding-core/rust/src/utils/: conversion.rs  errors.rs  exception.rs  handle.rs  jni.rs  jni_cache.rs  local_ref.rs  mod.rs  pair_iter.rs  path.rs
exonum-java-binding-core/rust/src/utils/resource_manager/: imp.rs  mod.rs  stub.rs
exonum-java-binding-core/rust/tests/: dumb_executor.rs  proxy.rs
exonum-java-binding-core/rust/tests/example_proxy/: mod.rs
exonum-java-binding/core/rust/: Cargo.toml  build.rs  generate_licenses.sh
exonum-java-binding/core/rust/ejb-app/: Cargo.toml  TUTORIAL.md  start_cryptocurrency_node.sh  start_qa_node.sh
exonum-java-binding/core/rust/ejb-app/src/: main.rs  node_builder.rs
exonum-java-binding/core/rust/exonum-java/: Cargo.toml  README.md  TUTORIAL.md  build.rs  exonum-java  log4j-fallback.xml  log4j_template.xml  qa-service.yml  start_cryptocurrency_node.sh  start_node.sh  start_qa_node.sh
exonum-java-binding/core/rust/exonum-java/src/: main.rs  node.rs  node_builder.rs
exonum-java-binding/core/rust/integration_tests/: Cargo.toml  log4j2.xml
exonum-java-binding/core/rust/integration_tests/benches/: jni_cache.rs
exonum-java-binding/core/rust/integration_tests/src/: example_proxy.rs  executor.rs  fake_runtime.rs  fake_service.rs  lib.rs  test_service.rs  vm.rs
exonum-java-binding/core/rust/integration_tests/tests/: dumb_executor.rs  executor.rs  executor_nested_attach.rs  hacky_executor.rs  jni_cache.rs  jni_cache_not_initialized.rs  local_frame_capacity.rs  local_frame_memory_leak_executor.rs  local_frame_memory_leak_jvm.rs  node_context.rs  runtime.rs  runtime_bootstrap.rs  runtime_error_handling.rs  service_factory_adapter.rs  service_proxy.rs  service_runtime.rs  service_runtime_bootstrap.rs  transaction_proxy.rs  utils_errors.rs
exonum-java-binding/core/rust/src/: lib.rs
exonum-java-binding/core/rust/src/cmd/: mod.rs  run.rs  run_dev.rs  supervisor_mode.rs
exonum-java-binding/core/rust/src/handle/: mod.rs
exonum-java-binding/core/rust/src/proto/: mod.rs  service_runtime.proto
exonum-java-binding/core/rust/src/proxy/: executor.rs  executors.rs  mod.rs  node.rs  runtime.rs  service.rs  transaction.rs
exonum-java-binding/core/rust/src/runtime/: cmd.rs  config.rs  error.rs  factory.rs  java_runtime_factory.rs  java_service_runtime.rs  library_loader.rs  mod.rs  paths.rs  service_factory_adapter.rs  services.rs  time_service.rs  utils.rs
rust/: Cargo.toml  rustfmt.toml
rust/src/: init.rs  leveldb.rs  lib.rs  map_index.rs  memorydb.rs  utils.rs
rust/src/storage/: db.rs  entry.rs  key_set_index.rs  leveldb.rs  list_index.rs  map_index.rs  memorydb.rs  mod.rs  proof_list_index.rs  proof_map_index.rs  value_set_index.rs
rust/src/utils/: conversion.rs  exception.rs  handle.rs  mod.rs  pair_iter.rs
rust/src/utils/resource_manager/: imp.rs  stub.rs
(+2137 files in other folders)
