[package]
name = "java_bindings"
version = "0.1.0"
authors = ["Stanislav Tkach <stanislav.tkach@xdev.re"]

[lib]
crate-type = ["dylib"]

[dependencies]
log = "0.3"
env_logger = "0.3"
jni = "0.5.0"

[dependencies.exonum]
git = "ssh://git@github.com/exonum/exonum-core.git"
version = "0.1.0"
# ¡Please keep README.md in sync with the Exonum-Core version,
# so that users are directed to the correct build instructions!
rev = "f68c29e8ddac7e3fe327e3949efb2729803aec8a"
