[package]
name = "java_bindings"
version = "0.2.0"
authors = ["Exonum Team <exonum@bitfury.com>"]

[workspace]
members = ["integration_tests", "ejb-app"]

[lib]
crate-type = ["dylib"]

[features]
# Enables native handles checking. Useful for debugging.
resource-manager = []
invocation = ["jni/invocation"]

[dependencies]
exonum = "0.9.0"
iron = "0.6.0"
failure = "0.1.1"
toml = "0.4.6"
jni = { version = "0.10.1", git = "https://github.com/alexander-irbis/jni-rs", branch = "clone-jnienv", features = ["invocation"] }
lazy_static = "1.0.1"
log = "0.4.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.19"
