[package]
name = "ejb-app"
version = "0.4.0-rc-draft"
authors = ["Exonum team <exonum@bitfury.com>"]

[dependencies]
java_bindings = { path = "..", features = ["invocation"] }
exonum-configuration = "0.10"
exonum-btc-anchoring = "0.10"
toml = "0.4.6"
serde = "1.0"
serde_derive = "1.0"

[dev-dependencies]
tempfile = "3"
