[package]
name = "integration_tests"
version = "0.4.0-SNAPSHOT"
authors = ["Exonum Team <exonum@bitfury.com>"]
publish = false
workspace = ".."

[lib]
crate-type = ["dylib"]

[features]

[dependencies]
futures = "0.1.14"
java_bindings = { path = "..", features = ["invocation"] }
exonum-testkit = "0.9"
lazy_static = "1.1.0"
rand = "0.6"
serde = "1.0"
serde_derive = "1.0"
