[package]
name = "integration_tests"
version = "0.4.0-SNAPSHOT"
authors = ["Exonum Team <exonum@bitfury.com>"]
publish = false
workspace = ".."

[lib]
crate-type = ["dylib"]

[features]

[dependencies]
futures = "0.1"
failure = "0.1"
java_bindings = { path = "..", features = ["invocation"] }
exonum-testkit = { git = "https://github.com/exonum/exonum", rev = "c4bcef725" }
lazy_static = "1.2"
rand = "0.6"
