[package]
name = "integration_tests"
version = "0.4.0-SNAPSHOT"
authors = ["Exonum Team <exonum@bitfury.com>"]
publish = false
workspace = ".."

[lib]
crate-type = ["dylib"]

[features]

[dependencies]
futures = "0.1"
failure = "0.1"
java_bindings = { path = "..", features = ["invocation", "resource-manager"] }
exonum-testkit = "0.10"
lazy_static = "1.2"
serde = "1.0"
serde_derive = "1.0"
rand = "0.6"
