[package]
name = "java_bindings"
version = "0.10.0-SNAPSHOT"
authors = ["Exonum Team <contact@exonum.com>"]

[workspace]
members = ["integration_tests", "exonum-java"]

[lib]
crate-type = ["dylib"]

[features]
# Enables native handles checking. Useful for debugging.
resource-manager = []
invocation = ["jni/invocation"]

[dependencies]
chrono = "0.4"
exonum = { version = "0.13.0-rc.2", features = ["rocksdb_snappy", "rocksdb_lz4", "rocksdb_zlib", "rocksdb_bzip2"] }
exonum-cli = "0.13.0-rc.2"
# Though it is not required here explicitly, it is added in order to access core proto files. [ECR-4036]
exonum-crypto = "0.13.0-rc.2"
exonum-derive = "0.13.0-rc.2"
exonum-proto = "0.13.0-rc.2"
exonum-testkit = "0.13.0-rc.2"
exonum-time = "0.13.0-rc.2"
failure = "0.1"
futures = "0.1"
jni = { version = "0.14", features = ["invocation"] }
lazy_static = "1.3"
log = "0.4"
parking_lot = "0.9"
protobuf = { version = "2.8", features = ["with-serde"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
structopt = "0.3"
toml = "0.5"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
exonum-build = { version = "0.13.0-rc.2" }

[profile.dev]
rpath = true

[profile.release]
rpath = true

# FIXME: using git dependency until Exonum 1.0 is released
[patch.crates-io]
exonum = { git = "https://github.com/exonum/exonum", rev = "199bf8e84" }
exonum-testkit = { git = "https://github.com/exonum/exonum", rev = "199bf8e84" }
exonum-time = { git = "https://github.com/exonum/exonum", rev = "199bf8e84" }
exonum-build = { git = "https://github.com/exonum/exonum", rev = "199bf8e84" }
exonum-derive = { git = "https://github.com/exonum/exonum", rev = "199bf8e84" }
exonum-cli = { git = "https://github.com/exonum/exonum", rev = "199bf8e84" }
exonum-proto = { git = "https://github.com/exonum/exonum", rev = "199bf8e84" }
exonum-supervisor = { git = "https://github.com/exonum/exonum", rev = "199bf8e84" }
exonum-crypto = { git = "https://github.com/exonum/exonum", rev = "199bf8e84" }
exonum-merkledb = { git = "https://github.com/exonum/exonum", rev = "199bf8e84" }
