[package]
name = "java_bindings"
version = "0.10.0-SNAPSHOT"
authors = ["Exonum Team <contact@exonum.com>"]
edition = "2018"

[workspace]
members = ["integration_tests", "exonum-java"]

[lib]
crate-type = ["dylib"]

[features]
# Enables native handles checking. Useful for debugging.
resource-manager = []

[dependencies]
anyhow = "1.0"
chrono = "0.4"
exonum = { version = "1.0.0-rc.2", features = ["rocksdb_snappy", "rocksdb_lz4", "rocksdb_zlib", "rocksdb_bzip2"] }
#exonum-btc-anchoring = "1.0.0-rc.2"
exonum-cli = "1.0.0-rc.2"
exonum-derive = "1.0.0-rc.2"
exonum-proto = "1.0.0-rc.2"
exonum-rust-runtime = "1.0.0-rc.2"
exonum-supervisor = "1.0.0-rc.2"
exonum-testkit = "1.0.0-rc.2"
exonum-time = "1.0.0-rc.2"
futures = "0.1"
jni = { version = "0.15", features = ["invocation"] }
lazy_static = "1.3"
log = "0.4"
parking_lot = "0.10"
protobuf = { version = "2.8", features = ["with-serde"] }
serde = { version = "1.0", features = ["serde_derive"] }
structopt = "0.3"

[build-dependencies]
exonum-build = { version = "1.0.0-rc.2" }

[profile.dev]
rpath = true

[profile.release]
rpath = true

[patch.crates-io]
exonum = { git = "https://github.com/exonum/exonum", rev = "f3d38e40", features = ["rocksdb_snappy", "rocksdb_lz4", "rocksdb_zlib", "rocksdb_bzip2"] }
exonum-cli = { git = "https://github.com/exonum/exonum", rev = "f3d38e40" }
exonum-derive = { git = "https://github.com/exonum/exonum", rev = "f3d38e40" }
exonum-proto = { git = "https://github.com/exonum/exonum", rev = "f3d38e40" }
exonum-rust-runtime = { git = "https://github.com/exonum/exonum", rev = "f3d38e40" }
exonum-supervisor = { git = "https://github.com/exonum/exonum", rev = "f3d38e40" }
exonum-testkit = { git = "https://github.com/exonum/exonum", rev = "f3d38e40" }
exonum-time = { git = "https://github.com/exonum/exonum", rev = "f3d38e40" }
exonum-build = { git = "https://github.com/exonum/exonum", rev = "f3d38e40" }
exonum-explorer-service = { git = "https://github.com/exonum/exonum", rev = "f3d38e40" }
exonum-node = { git = "https://github.com/exonum/exonum", rev = "f3d38e40" }
exonum-system-api = { git = "https://github.com/exonum/exonum", rev = "f3d38e40" }
