[package]
name = "ejb-app"
version = "0.5.0-SNAPSHOT"
authors = ["Exonum team <exonum@bitfury.com>"]

[dependencies]
# Specify the "resource-manager" feature explicitly to prevent issues with linking (see ECR-2855).
# Although its primary goal is to detect _programming_ errors that shall not occur
# in a correct application early, it is currently required in the application 
# because some public APIs in Java permit passing arbitrary pointers (e.g., Snapshot#newInstance).
java_bindings = { path = "..", features = ["invocation", "resource-manager"] }
exonum-configuration = "0.10"
exonum-btc-anchoring = "0.10"
exonum-time = "0.10"
toml = "0.4.6"
serde = "1.0"
serde_derive = "1.0"

[dev-dependencies]
tempfile = "3"
