[package]
name = "exonum-java"
version = "0.9.0-SNAPSHOT"
authors = ["Exonum team <contact@exonum.com>"]

[dependencies]
env_logger = "0.7"
exonum-supervisor = "0.13.0-rc.2"
exonum-time = "0.13.0-rc.2"
failure = "0.1"
# Specify the "resource-manager" feature explicitly to prevent issues with linking (see ECR-2855).
# Although its primary goal is to detect _programming_ errors that shall not occur
# in a correct application early, it is currently required in the application
# because some public APIs in Java permit passing arbitrary pointers (e.g., Snapshot#newInstance).
java_bindings = { path = "..", features = ["invocation", "resource-manager"] }
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"

[dev-dependencies]
tempfile = "3"
