[package]
name = "exonum-java"
version = "0.10.0-SNAPSHOT"
authors = ["Exonum team <contact@exonum.com>"]

[dependencies]
env_logger = "0.6"
exonum-explorer-service = "1.0.0-rc.1"
exonum-node = "1.0.0-rc.1"
exonum-system-api = "1.0.0-rc.1"
failure = "0.1"
# Specify the "resource-manager" feature explicitly to prevent issues with linking (see ECR-2855).
# Although its primary goal is to detect _programming_ errors that shall not occur
# in a correct application early, it is currently required in the application
# because some public APIs in Java permit passing arbitrary pointers (e.g., Snapshot#newInstance).
java_bindings = { path = "..", features = ["resource-manager"] }
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"
