[package]
name = "integration_tests"
version = "0.7.0"
authors = ["Exonum Team <exonum@bitfury.com>"]
publish = false
workspace = ".."

[lib]
crate-type = ["dylib"]

[features]

[dependencies]
futures = "0.1"
failure = "0.1"
# Specify the "resource-manager" feature explicitly to prevent issues with linking (see ECR-2855)
java_bindings = { path = "..", features = ["invocation", "resource-manager"] }
exonum-testkit = "0.11"
lazy_static = "1.3"
serde = "1.0"
serde_derive = "1.0"
rand = "0.7"
tempfile = "3.0"
