[package]
name = "integration_tests"
version = "0.10.0-SNAPSHOT"
authors = ["Exonum Team <contact@exonum.com>"]
publish = false
workspace = ".."

[lib]
crate-type = ["dylib"]

[features]

[dependencies]
exonum-testkit = "1.0.0-rc.1"
exonum-derive = "1.0.0-rc.1"
failure = "0.1"
futures = "0.1"
# Specify the "resource-manager" feature explicitly to prevent issues with linking (see ECR-2855)
java_bindings = { path = "..", features = ["invocation", "resource-manager"] }
lazy_static = "1.3"
rand = "0.7"
serde = "1.0"
serde_derive = "1.0"
tempfile = "3.1"
