[package]
name = "integration_tests"
version = "0.11.0-SNAPSHOT"
authors = ["Exonum Team <contact@exonum.com>"]
edition = "2018"
publish = false
workspace = ".."

[lib]
crate-type = ["dylib"]

[dependencies]
exonum-testkit = "1.0.0"
exonum-derive = "1.0.0"
futures = "0.3"
# Specify the "resource-manager" feature explicitly to prevent issues with linking (see ECR-2855)
java_bindings = { path = "..", features = ["resource-manager"] }
lazy_static = "1.3"
rand = "0.8"
serde = { version = "1.0", features = ["serde_derive"] }
